<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.moandroidapps.bookshare.catalog.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="102"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web"
        android:orderInCategory="103"
        android:title="@string/on_the_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="0"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_cart"/>




</menu>
